--- a/index.html
+++ b/index.html
@@ -19,20 +19,28 @@
   </nav>
   <div class="container">
     <div id="editor"></div>
-    <div class="player">
-      <div class="preview">
-        <img id="album-art" src="assets/images/defaultAlbum.png" alt="Album Art">
-        <div class="song-info">
-          <h1 id="title">Song Title</h2>
-          <h4 id="artist">Artist</h3>
-        </div>
-        <div class="controls">
-          <div id="play"><i class="bi bi-play-circle-fill"></i></div>
+    <div>
+      <div class="tab">
+        <button class="tablinks active">Player</button>
+        <button class="tablinks" disabled>Karaoke</button>
+      </div>
+      <div class="player">
+        <div class="preview">
+          <img id="album-art" src="assets/images/defaultAlbum.png" alt="Album Art">
+          <div class="song-info">
+            <h1 id="title">Untitled</h1>
+            <h4 id="artist">Unknown</h4>
+          </div>
+          <div class="controls">
+            <div id="play"><i class="bi bi-play-circle-fill"></i></div>
+          </div>
         </div>
       </div>
     </div>
+    
   </div>
   
   <script src="musicCompiler.js" type="module"></script>
+  <script src="ui.js" type="module"></script>
 </body>
 </html>
