--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<html>
+<html lang="en">
 <head>
+  <base href=".">
   <title>Swavy Music Editor</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
+  <script src="TJSInstruments.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.52.2/min/vs/loader.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
